New in version Master:
**********************
**********************

General Changes:
****************

Heavy use of typing so this make impossible to use BasicTools on python prior to version 3.7 and numpy verison 1.19
   this implies the use of BasicTools type defined in the BasicTools.NumpyDefs module
Optimization or MeshWriter + Code cleaning
(ParserHelper.py) Add ReadVectorXYAdd function to read 2D vectors
(UnstructuredMeshInspectionTools.py) Make ComputeMeshMinMaxLengthScale work on 2D meshes
Some work for better 2D support (work in progress)
(LinearSolver.py) New implementation with a factory (support for user defined solvers)
Now BaseOutputObject.Print can print the current used memory used by the python process
Better memory handling for multi thread integration
OpenMP activated on windows packages
During compilation "generate"  is automatically called during the "build_clib" step
Now the IntegrationClass. SetElementFilter can take a frozen filter
(BasicTools.Containers.UnstructuredMeshCreationTools) Bew CreateDisk function to create a mesh of disk section
New module BasicTools.Containers.FiltersTools with useful functions over filters
(Bug correction) on some cases the skin (ComputeSkin ) had one element missing
(Bug correction) ElementFilter using mask
New LSDyna Reader and Writer
The user has the possibility to set the number of thread used by the library (BasicTools.Helpers.CPU:SetNumberOfThreadsPerInstance)
(GeofWriter) correct output of elset whe useOriginalId is True
BasicTools.Helpers.Test support for typing test with mypy (option -t)
BasicTools.Containers.UnstructuredMesh New function GetPointsDimensionality and GetElementsDimensionality and Clean to eliminate empty tags
New function ElementWiseIpToFETransferOp, ElementWiseFEToFETransferOp
The user can calculate the gradient of a ImplicitGeometry by calling the GetGradientDistanceToPoint